fix text overflow #27

--- a/src/common.blocks/contact-item/contact-item.scss
+++ b/src/common.blocks/contact-item/contact-item.scss
@@ -15,6 +15,7 @@
     font-size: 1.34rem;
     letter-spacing: -0.03rem;
     padding-left: 0.75rem;
+    line-height: 1;
 
     @media screen and (max-width: 400px), screen and (max-width: 1094px) and (min-width: 727px) {
       display: block;
