--- a/src/common.blocks/progress-list-item/progress-list-item.scss
+++ b/src/common.blocks/progress-list-item/progress-list-item.scss
@@ -49,6 +49,11 @@
     line-height: 1.3;
     text-transform: uppercase;
     letter-spacing: -0.03rem;
+
+    @media screen and (max-width: 500px) {
+      font-size: 1.25rem;
+      overflow-wrap: anywhere;
+    }
   }
 
   &__description {
